[package]
name = "temper_prom_rs"
version = "0.1.0"
edition = "2021"
author = "David Schramm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusb = "0.9"
tide = "0.14.0"
async-std = { version = "1.6.0", features = ["attributes"] }
#serde = { version = "1.0", features = ["derive"] }
